--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Hide follows",
-  "description": "Hides number of followers on Twitter",
+  "description": "Hides social media statistics (ex. number of followers, notes).",
   "version": "1.0",
   "content_scripts": [
     {
@@ -15,7 +15,7 @@
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
-    "default_title": "Click here!"
+    "default_title": "???"
   },
   "permissions": [
     "activeTab",
